--- a/toDoList-v1/views/list.ejs
+++ b/toDoList-v1/views/list.ejs
@@ -1,18 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To DO List</title>
-</head>
-<body>
+<% #include("header") -%>
+    <div class="box" id="heading">
+        <h1> <%= listTitle %></h1>
+    </div>
     
-    <% if(kindOfDay === "Saturday" || kindOfDay === "Sunday"){ %>
-        <h1 style="color: purple;">It's a <%= kindOfDay %> !</h1>
-    <% } else{ %>
-        <h1 style="color: green;">It's a <%= kindOfDay %> !</h1>
-    <% } %>
-
-</body>
-</html>
+    <div class="box">
+        <% for(int i = 0; i<newListItems.length();i++){ %>
+            <div class="item">
+                <input type="checkbox" >
+                <p><%= newListItems[i] %></p>
+            </div>
+            <% } %>
+            <form class="item" action="/" method="post"> 
+                <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+                <button type="submit" name="button" value="listTitle">+</button>
+            </form>
+    </div>
+      
+<%- include("footer") -%>
